src/parser/snapshots/molt__parser__tests__ident.snap
---
source: src/parser/tests.rs
expression: "crate :: parser :: tests :: parse_molt_ok :: < Ident > (\"foo\")"
---
Ident(
    Span {
        start: 0,
        end: 3,
    },
)
