src/parser/snapshots/molt__parser__tests__multi_decl_file.snap
---
source: src/parser/tests.rs
expression: "crate :: parser :: tests :: parse_molt_ok :: < MoltFile >\n(\"let foo: Ident; let foo: Ident = { bar };\")"
---
MoltFile {
    vars: [
        VarDecl {
            id: VarId(
                Id(
                    Var(
                        0,
                    ),
                ),
            ),
            node: None,
        },
        VarDecl {
            id: VarId(
                Id(
                    Var(
                        1,
                    ),
                ),
            ),
            node: Some(
                Id(
                    PatNode(
                        0,
                    ),
                ),
            ),
        },
    ],
    commands: [],
    sorted: false,
}
