src/parser/snapshots/molt__parser__tests__single_decl_node.snap
---
source: src/parser/tests.rs
expression: "crate :: parser :: tests :: parse_molt_ok :: < MoltFile >\n(\"let foo: Lit = { \\\"hi\\\" };\")"
snapshot_kind: text
---
MoltFile {
    vars: [
        VarDecl {
            id: VarId(
                Id(
                    Var(
                        0,
                    ),
                ),
            ),
            node: Some(
                Id(
                    PatNode(
                        0,
                    ),
                ),
            ),
        },
    ],
    commands: [],
    sorted: false,
}
