src/parser/snapshots/molt__parser__tests__var_decl.snap
---
source: src/parser/tests.rs
expression: "crate :: parser :: tests :: parse_molt_ok :: < VarDecl >\n(\"let foo: Ident = bar;\")"
---
VarDecl {
    id: VarId(
        Id(
            Var(
                0,
            ),
        ),
    ),
    kind: Ident,
    node: Some(
        Id(
            PatNode(
                0,
            ),
        ),
    ),
}
